# mxpir

./: Cargo.toml  README.md
benches/: pbc.rs  pir.rs
src/: client.rs  lib.rs  server.rs
tests/: multipir.rs
